--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample Node.js Project",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "echo 'No build step needed for plain Node.js'"
   },
   "author": "Adem Cemil YALCIN",
   "license": "ISC",
